--- a/css/style.css
+++ b/css/style.css
@@ -185,7 +185,8 @@
         width: 100%;
     }
     .main-content #sidebar-toggle {
-        background:rgb(100%, 100%, 100%, 0.5);
+        background: #fff;
+        opacity: 0.5;
         border-radius: 3px;
         display: block;
         position: relative;
