--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@
         flex-direction: row;   
     }   
     .submenu li {
-        margin: -10px 25px;
+        margin: -10px 18px;
     } 
     .submenu .facebook:before{
         position: absolute;
@@ -144,7 +144,7 @@
     #sidebar {
         position: absolute;
         width: 160px;
-        height: 700px;
+        min-height: 100%;
         left: -160px;
         background: #141414;
     }
