--- a/css/style.css
+++ b/css/style.css
@@ -11,10 +11,11 @@
     }
     .background{
     background: url(../image/background.bmp) ;
+    background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    overflow: hidden;
+    background-color:#464646;
     }
     header{
         position: relative;
@@ -122,7 +123,6 @@
         display: none;
         position: absolute;
         height: 100%;
-        width: 100%;
         left: 0;
         -webkit-transition:  left 0.4s ease-in-out;
         -moz-transition:  left 0.4s ease-in-out;
