--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,10 @@
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size: cover;
-    background-color:#464646;
+    -webkit-background-size: cover; /* Safari 3.0, Android 2.3 - 4.3, Opera Mini и т. д. */
+    -moz-background-size: cover; /* Gecko 1.9.2 (Firefox 3.6) */
+    -o-background-size: cover; /* Opera 9.5 */
+    background-size: cover; /* Gecko 2.0 (Firefox 4.0) and other CSS3-compliant browsers */
     }
     header{
         position: relative;
