--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@
     src: local('Caviar Dreams'), 
          url('../fonts/caviar-dreams-bold.ttf') format('truetype');
     }
+    html{ height:100%; min-height:100%; }
+    body{ min-height:100%; } 
     *{
         box-sizing: border-box;
         margin: 0;
@@ -14,10 +16,10 @@
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    -webkit-background-size: cover; /* Safari 3.0, Android 2.3 - 4.3, Opera Mini и т. д. */
-    -moz-background-size: cover; /* Gecko 1.9.2 (Firefox 3.6) */
-    -o-background-size: cover; /* Opera 9.5 */
-    background-size: cover; /* Gecko 2.0 (Firefox 4.0) and other CSS3-compliant browsers */
+    -webkit-background-size: cover; 
+    -moz-background-size: cover; 
+    -o-background-size: cover; 
+    background-size: cover; 
     }
     header{
         position: relative;
