--- a/css/style.css
+++ b/css/style.css
@@ -16,10 +16,10 @@
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    -webkit-background-size: 100% auto; 
-    -moz-background-size: 100% auto; 
-    -o-background-size: 100% auto; 
-    background-size: 100% auto; 
+    -webkit-background-size: cover; 
+    -moz-background-size: cover; 
+    -o-background-size: cover; 
+    background-size: cover; 
     }
     header{
         position: relative;
