--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,6 @@
     src: local('Caviar Dreams'), 
          url('../fonts/caviar-dreams-bold.ttf') format('truetype');
     }
-    html{ height:100%; min-height:100%; }
-    body{ min-height:100%; } 
     *{
         box-sizing: border-box;
         margin: 0;
@@ -20,6 +18,7 @@
     -moz-background-size: cover; 
     -o-background-size: cover; 
     background-size: cover; 
+    overflow: hidden;
     }
     header{
         position: relative;
@@ -57,13 +56,14 @@
         font-family: 'Caviar Dreams';
         text-transform: uppercase;
         letter-spacing: 2px;
+        transition: color 0.5s;
     }
     .list-nav li a span{
         color:#23A5B0;
     }
     .list-nav li a:hover{
         color:#23A5B0;
-        transition: color 0.5s;
+        
         text-decoration: none; 
     }
     .submenu{
@@ -71,58 +71,26 @@
         flex-direction: row;   
     }   
     .submenu li {
-        margin: -10px 18px;
+        margin: -10px 15px;
     } 
-    .submenu .facebook:before{
-        position: absolute;
-        content:"";
-        background: url('../icons/facebook.png') no-repeat center;
-        width: 20px;
-        height: 20px;
-        transition: background 0.4s ease-out;
-        
+    .fa-facebook{
+        transition: color 0.4s;
     }
-    .submenu .facebook:hover:before{
-        position: absolute;
-        content:"";
-        background: url('../icons/facebook_hover.png') no-repeat center;
-        width: 20px;
-        height: 20px;
-        
+    .fa-twitter{
+        transition: color 0.4s;
     }
-    .submenu .twitter:before{
-        position: absolute;
-        content:"";
-        background: url('../icons/twitter.png') no-repeat center;
-        width: 20px;
-        height: 20px;
-        transition: background 0.4s ease-out;
+    .fa-instagram{
+        transition: color 0.4s;
     }
-    .submenu .twitter:hover:before{
-        position: absolute;
-        content:"";
-        background: url('../icons/twitter_hover.png') no-repeat center;
-        width: 20px;
-        height: 20px;
+    .fa-facebook:hover{
+        color: #dc278c;
     }
-    .submenu .instagram:before{
-        position: absolute;
-        content:"";
-        background: url('../icons/instagram.png') no-repeat center;
-        width: 20px;
-        height: 20px;
-        transition: background 0.4s ease-out;
+    .fa-twitter:hover{
+        color: #dc278c;
     }
-    .submenu .instagram:hover:before{
-        position: absolute;
-        content:"";
-        background: url('../icons/instagram_hover.png') no-repeat center;
-        width: 20px;
-        height: 20px;
+    .fa-instagram:hover{
+        color: #dc278c;
     }
-
-
-    
     .container {
         display: none;
         position: absolute;
@@ -148,7 +116,7 @@
     #sidebar {
         position: absolute;
         width: 160px;
-        min-height: 100%;
+        height: 1000px;
         left: -160px;
         background: #141414;
     }
@@ -163,7 +131,7 @@
     #sidebar ul li a {
         font-size: 20px;
         color: white;
-        padding: 20px 0px;
+        padding: 18px 0px;
         text-decoration: none;
         text-align: center;
         display: block;
@@ -190,7 +158,6 @@
     }
     .main-content #sidebar-toggle {
         background: #fff;
-        opacity: 0.5;
         border-radius: 3px;
         display: block;
         position: relative;
@@ -204,4 +171,7 @@
         height: 2px;
         background-color: #000;
         border-radius: 1px;
+    }
+    .exit{
+        background: red;
     }
