--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@
     src: local('Caviar Dreams'), 
          url('../fonts/caviar-dreams-bold.ttf') format('truetype');
     }
+    html{ height:100%; min-height:100%; }
+    body{ min-height:100%; } 
     *{
         box-sizing: border-box;
         margin: 0;
