--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     src: local('Caviar Dreams'), 
          url('../fonts/caviar-dreams-bold.ttf') format('truetype');
     }
-    html{ height:100%; min-height:100%; }
+    html{ height:100%; min-height:100%;    overflow: hidden; }
     body{overflow: hidden;min-height:100%; }
     *{
         box-sizing: border-box;
@@ -12,7 +12,6 @@
         padding: 0;
     }
     .background{
-    overflow: hidden;
     background: url(../image/background.bmp) no-repeat scroll center center / cover;
     background-position: center center;
     background-repeat: no-repeat;
@@ -21,7 +20,6 @@
     -moz-background-size: cover; 
     -o-background-size: cover; 
     background-size: cover;
-    height: 700px;
     }
     header{
         position: relative;
