--- a/css/style.css
+++ b/css/style.css
@@ -4,25 +4,23 @@
     src: local('Caviar Dreams'), 
          url('../fonts/caviar-dreams-bold.ttf') format('truetype');
     }
-    html{ height:100%; min-height:100%;    overflow: hidden; }
-    body{overflow: hidden;min-height:100%; }
+    html{
+        height:100%;
+        min-height:100%;
+        overflow: hidden; 
+    }
+    body{
+        overflow: hidden;
+        min-height:100%; 
+    }
     *{
         box-sizing: border-box;
         margin: 0;
         padding: 0;
     }
-    .background{
-    background: url(../image/background.bmp) no-repeat scroll center center / cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    -webkit-background-size: cover; 
-    -moz-background-size: cover; 
-    -o-background-size: cover; 
-    background-size: cover;
-    }
     header{
-        position: relative;
+        position: fixed;
+        width: 100%;
         height: 60px;
         background: #141414;
         margin:0;
@@ -32,6 +30,12 @@
         justify-content: space-around; 
         align-items: center;
     }
+    .background{
+    background: url(../image/background.bmp) no-repeat scroll center center / cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    }
+    
     .logo{
         width: 200px;
     }
