--- a/css/resp.css
+++ b/css/resp.css
@@ -1,4 +1,4 @@
-@media all and (max-width:1030px){
+@media all and (max-width:1035px){
     .item .block2 img{
         width: 160px ;
     }
@@ -9,6 +9,7 @@
     .item .block3{
         width: 450px;
         padding-left: 30px;
+        display: inline-block;
     }
     .content .list{
         max-width: 729px
@@ -27,7 +28,7 @@
         background-position: center center;
     }
 }
-@media all and (max-width:772px){
+@media all and (max-width:780px){
     .item .block1{
     width: 100px ; 
     height: 30px;
@@ -55,7 +56,7 @@
     }
     .item .block3{
         width: 500px;
-        padding:0;
+        margin-left: -20px;
     }
     .content .list{
         width: 500px;
