--- a/css/resp.css
+++ b/css/resp.css
@@ -1,18 +1,14 @@
-@media all and (max-width:1035px){
+@media all and (max-width:1165px){
     .item .block2 img{
-        width: 160px ;
+        height: 150px ;
     }
-    .block3 a .title{
+    /* .block3 a .title{
         width: 420px;
-    }
-
+    } */
     .item .block3{
-        width: 450px;
+        /* width: 450px; */
         padding-left: 30px;
         display: inline-block;
-    }
-    .content .list{
-        max-width: 729px
     }
 }
 @media all and (max-width:915px){
@@ -22,21 +18,25 @@
     .con-logo .logo{
         width: 140px;
     }
+    .item .block2 img{
+        height: 90px ;
+    }
 }
 @media all and (max-width:1000px){
     .background{
         background-position: center center;
     }
 }
-@media all and (max-width:780px){
-    .item .block1{
-    width: 100px ; 
+
+
+@media all and (max-width:792px){
+     .item .block1{
+    width: 80px; 
     height: 30px;
     padding: 0;
     font-size: inherit;
     margin-bottom: 10px;
     letter-spacing: 0px;  
-    left:10px;
     }
     .item .block1 time{
     font-size: 20px;
@@ -45,21 +45,33 @@
     .item .block1 .month{
         display: inline;
         font-size:15px;
-        padding-left:5px;
         border:none;
-    }
+    } 
     .item .block2{
-        display:block; 
+        width: 100%;
+        margin-left: 0;
+        margin-right: 0;
     }
     .item .block2 img{
-        width: 480px ;
+        height: 100%;
+        width: 100%;
+        padding-left:10px;
+        padding-right:10px;
     }
-    .item .block3{
-        width: 500px;
-        margin-left: -20px;
+     .item .block3{
+        width: 100%;
+        padding-left:10px;
+    } 
+    .item .block3 .title{
+        padding-right: 10px;
+        width: 100%;
+        font-size:14px;
     }
-    .content .list{
-        width: 500px;
+    .item .block3 .link{
+        font-size: 12px;
+        padding: 0 10px;
+        height: 25px;
+        line-height: 25px;
     }
     .container-list .list-nav{
         display: none;
