--- a/css/news.css
+++ b/css/news.css
@@ -43,7 +43,7 @@ body{
     color:#820034;
     text-transform: uppercase;
     letter-spacing: 0; 
-    border-bottom: 1px solid #FE617B;    
+    border-bottom: 1px solid #fff;    
 }
 .block2{
     display: inline-block;
