--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,6 @@
         width: 100%;
     }
     .main-content #sidebar-toggle {
-        background: #fff;
         border-radius: 3px;
         display: block;
         position: relative;
@@ -177,4 +176,10 @@
         height: 2px;
         background-color: #000;
         border-radius: 1px;
+    }
+    .fa-bars{
+        margin-top:-10px;
+    }
+    .fa-times{
+        margin-top:-10px;
     }
