--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,9 @@
     }
     html{
         height:100%;
-        min-height:100%;
-        overflow: hidden; 
+        min-height:100%; 
     }
     body{
-        overflow: hidden;
         min-height:100%; 
     }
     *{
@@ -29,13 +27,12 @@
         flex-wrap: wrap; 
         justify-content: space-around; 
         align-items: center;
-    }
+    } 
     .background{
     background: url(../image/background.bmp) no-repeat scroll center center / cover;
     background-position: center center;
     background-repeat: no-repeat;
     }
-    
     .logo{
         width: 200px;
     }
@@ -187,3 +184,6 @@
     .fa-times{
         margin-top:-1px;
     }
+     .soundcloud{
+        margin-top:20px; 
+    } 
