--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
     html{
         height:100%;
         min-height:100%; 
+        
     }
     body{
         min-height:100%; 
@@ -27,7 +28,7 @@
         flex-wrap: wrap; 
         justify-content: space-around; 
         align-items: center;
-    } 
+    }  
     .background{
     background: url(../image/background.bmp) no-repeat scroll center center / cover;
     background-position: center center;
@@ -185,5 +186,10 @@
         margin-top:-1px;
     }
      .soundcloud{
-        margin-top:20px; 
+        display: flex;
+        justify-content: center; 
+        align-items: center;
+        width:100%;
+        padding:30px 100px;
     } 
+    
