--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,7 @@
         top: 0;
         height: 100%;
         z-index: 0;
+        
     }
     #sidebar {
         position: absolute;
@@ -126,6 +127,7 @@
         height: 10000px;
         left: -160px;
         background: #141414;
+        z-index: 9999;
     }
     #sidebar ul {
         margin: 0;
