--- a/css/news.css
+++ b/css/news.css
@@ -7,12 +7,6 @@
 header{
     position: fixed;
 }  
-html{
-    overflow: initial; 
-}
-body{
-    overflow: initial;
-}
 body{
     font-family: 'Caviar Dreams';
 }
@@ -106,5 +100,5 @@ body{
     transition: background 0.4s;
 }
     .fa-book{
-        color:black;
+        color:#000;
     }
