--- a/css/resp.css
+++ b/css/resp.css
@@ -86,6 +86,9 @@
     .container-submenu .submenu {
         margin-left:40px;
     }
+    body .soundcloud{
+        padding:30px 30px;
+    } 
 }
 
 
