--- a/css/resp.css
+++ b/css/resp.css
@@ -11,6 +11,11 @@
         display: inline-block;
     }
 }
+@media all and (max-width:1000px){
+    .background{
+        background-position: center center;
+    }
+}
 @media all and (max-width:915px){
     .container-list .list-nav li{
         font-size:16px;
@@ -22,13 +27,6 @@
         height: 90px ;
     }
 }
-@media all and (max-width:1000px){
-    .background{
-        background-position: center center;
-    }
-}
-
-
 @media all and (max-width:800px){
      .item .block1{
     width: 80px; 
@@ -90,5 +88,9 @@
         padding:30px 30px;
     } 
 }
-
+@media all and (max-width:320px){
+    .con-logo .logo{
+        width: 90px;
+    }
+}
 
