--- a/css/resp.css
+++ b/css/resp.css
@@ -87,6 +87,12 @@
     body .soundcloud{
         padding:30px 30px;
     } 
+    .player audio{
+        width: 100%;
+    }
+    .player  #playlist{
+        width: 100%;
+    }
 }
 @media all and (max-width:320px){
     .con-logo .logo{
