--- a/css/style.css
+++ b/css/style.css
@@ -194,4 +194,24 @@
         width:100%;
         padding:30px 140px;
     } 
+    .player{
+        position: absolute;      
+        bottom:0; 
+        width:100%; 
+    }
+    audio{
+        display: flex;
+        justify-content: center; 
+        align-items: center;
+        margin:auto;
+        width: 600px;
+        }
+    #playlist{
+        background: #141414;
+        display: block;
+        text-align: center;
+        margin:auto;
+        width: 540px;      
+    }
+    
     
