--- a/css/resp.css
+++ b/css/resp.css
@@ -10,6 +10,9 @@
         padding-left: 30px;
         display: inline-block;
     }
+    body .wrapper{
+        top:600px; 
+    }
 }
 @media all and (max-width:1000px){
     .background{
