--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@
         flex-wrap: wrap; 
         justify-content: space-around; 
         align-items: center;
+        z-index: 2;
     }  
     .background{
     background: url(../image/background.bmp) no-repeat scroll center center / cover;
@@ -115,12 +116,11 @@
     }
     .swipe-area {
         position: absolute;
-        width: 50px;
+        width: 8px;
         left: 0;
         top: 0;
-        height: 100%;
-        z-index: 0;
-        
+        height: 10000px;
+        z-index: 1000;
     }
     #sidebar {
         position: absolute;
@@ -157,7 +157,7 @@
     .main-content {
         width: 100%;
         height: 100%;
-        padding: 10px;
+        padding: 10px 14px;
         position: relative;
     }
     .main-content .content{
@@ -193,6 +193,7 @@
     position: absolute; 
     width:100%;  
     bottom:20px;  
+    z-index:0;
     }
     button {
         margin: 0;
@@ -236,4 +237,8 @@
         padding:30px 140px;
         background: #141414;  
     }
+    .opened{
+        display: block;
+    }
+
     
