--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,7 @@
         padding-left: 60px;
         left: 0;
         top: 0;
+        background: #141414;
         height: 10000px;
     }
     #sidebar {
