--- a/css/resp.css
+++ b/css/resp.css
@@ -1,3 +1,13 @@
+@media all and (max-width:1920px){
+    body .wrapper {    
+        top:1000px; 
+    }
+}
+@media all and (max-width:1280px){
+    body .wrapper {    
+        top:800px; 
+    }
+}
 @media all and (max-width:1165px){
     .item .block2 img{
         height: 150px ;
