--- a/css/resp.css
+++ b/css/resp.css
@@ -1,9 +1,9 @@
-@media all and (max-width:1920px){
+@media all and (max-height:1200px){
     body .wrapper {    
         top:1000px; 
     }
 }
-@media all and (max-width:1280px){
+@media all and (max-height:800px){
     body .wrapper {    
         top:800px; 
     }
