--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@
     background-position: center center;
     background-repeat: no-repeat;
     background-color:#141414;
+    overflow: hidden;
     }
     .logo{
         width: 200px;
@@ -227,8 +228,7 @@
     }
     .wrapper {
         display: none;
-	    position: absolute;      
-        top:655px; 
+        position: absolute;      
         width:100%; 
         z-index: -1;
     }
