--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@
         display: block;
         position: absolute;
         width: 15px;
-        padding-left: 100px;
+        padding-left: 80px;
         opacity: 0.01;
         background: #141414;
         left: 0;
@@ -237,6 +237,8 @@
         width:100%;
         padding:30px 140px;
         background: #141414;  
+        position: absolute;
+        z-index:3;
     }
     .opened{
         display: block;
