--- a/css/resp.css
+++ b/css/resp.css
@@ -85,7 +85,7 @@
         margin-left:40px;
     }
     body .soundcloud{
-        padding:30px 30px;
+        padding:30px;
     } 
 } 
 @media all and (max-width:320px){
