--- a/css/index.css
+++ b/css/index.css
@@ -6,33 +6,36 @@
          url('../fonts/caviar-dreams-bold.ttf') format('truetype');
     }
     html{
-        height:100%;
-        min-height:100%; 
-        
-    }
+    height:100%;
+    min-height:100%;    
+}
     body{
-        min-height:100%; 
+    min-height:100%; 
     }
     *{
-        box-sizing: border-box;
-        margin: 0;
-        padding: 0;
-    }
-        
-    
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}   
+    .background {
+    background: url(../image/background.bmp) no-repeat scroll center center / cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-color: #141414;
+}  
     .container-btn{
     position: absolute; 
     width:100%;  
     bottom:20px;  
     z-index:0;
-    }
+}
     button {
-        margin: 0;
-        padding: 0;
-        background: none;    
-        border: none;
-        outline: none;
-    }
+     margin: 0;
+    padding: 0;
+    background: none;    
+    border: none;
+    outline: none;
+}
     #opensc{
     cursor: pointer;  
     display: flex;
@@ -49,39 +52,39 @@
     text-align: center;
     border-radius: 50px;
     transition: background 0.4s;
-    }
+}
     #opensc:hover{
     background: #141414; 
     color: #fff;
-    }
+}
     .wrapper {
-        display: none;
-	    position: absolute;       
-        width:100%; 
-        z-index: -1;
-    }
+    display: none;
+	position: absolute;       
+    width:100%; 
+}
+    .soundcloud{
+    justify-content: center; 
+    align-items: center;
+    width:100%;
+    padding:30px 140px;
+    background: #141414;  
+}
     .sound__header{
         background: green;
-    }
+}
     .opened{
         display: block;
-    }
-
-
+}
 /*/////////////////////*/
 
 @media all and (max-width:800px) {
-
-
     body .soundcloud {
         padding: 30px 30px;
     }
-
     .player audio {
         width: 100%;
     }
 }
-
 
 @media all and (max-width:1000px) {
     .background {
