--- a/css/news.css
+++ b/css/news.css
@@ -96,7 +96,7 @@ body {
     padding: 5px 0;
 }
 
-.link {
+/* .link {
     background: #363f45;
     color: #fff;
     display: inline-block;
@@ -113,7 +113,7 @@ body {
     letter-spacing: 0;
     font-size: 16px;
     width: 30%;
-}
+} */
 
     .link:hover {
         background: #FE0065;
@@ -147,11 +147,7 @@ body {
     }
 }
 
-@media all and (max-width:800px) {
-    .list .item{
-        padding: 0 40px;
-
-    }
+@media all and (max-width:810px) {
     .item .block1 {
         width: 80px;
         height: 30px;
@@ -196,10 +192,10 @@ body {
             font-size: 14px;
         }
 
-        .item .block3 .link {
+        /* .item .block3 .link {
             width: 100px;
             font-size:14px;
-        }
+        } */
 }
 
 
